# stargazer_loc

./: README.md
landmark_finder/: CMakeLists.txt  package.xml
landmark_finder/include/: CoordinateTransformations.h  DebugVisualizer.h  LandmarkFinder.h  LandmarkFinderInterface.h  LandmarkFinderInterfaceParameters.h  StargazerConfig.h  StargazerConversionMethods.h  StargazerImgTypes.h  StargazerTypes.h  bundle_adjuster.h  ros_utils.h
landmark_finder/launch/: icp.yaml  landmark_finder.launch  landmark_finder_node.launch
landmark_finder/msg/: LandmarkPoint.msg
landmark_finder/src/: DebugVisualizer.cpp  LandmarkFinder.cpp  LandmarkFinderInterface.cpp  LandmarkFinderInterfaceParameters.cpp  bundle_adjuster.cpp
landmark_localizer/: CMakeLists.txt  package.xml
landmark_localizer/include/: StargazerImgTypes.h  StargazerTypes.h  combinations.h  monocular_pose_estimator.h  pose_estimator.h  visualization.h
landmark_localizer/launch/: landmark_localizer.launch
landmark_localizer/src/: landmark_localizer_node.cpp  monocular_pose_estimator.cpp  pose_estimator.cpp  visualization.cpp
libpointmatcher_ros/: CMakeLists.txt
libpointmatcher_ros/src/: point_cloud.cpp
